--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "jest"
   },
   "keywords": [],
@@ -12,7 +13,7 @@
   "dependencies": {
     "@types/jest": "^27.0.2",
     "@types/selenium-webdriver": "^4.0.16",
-    "chromedriver": "^95.0.0",
+    "chromedriver": "^107.0.3",
     "express": "^4.17.1",
     "geckodriver": "^2.0.4",
     "jest": "^27.3.1",
